--- a/src/assets/styles/layout/base.scss
+++ b/src/assets/styles/layout/base.scss
@@ -1,48 +1,73 @@
-body, html {
-  height: 100%;
+* {
+    box-sizing: inherit;
+}
+
+*:before,
+*:after {
+    box-sizing: inherit;
+}
+
+body,
+html {
+    width: 100%;
+    height: 100%;
+}
+
+html {
+    box-sizing: border-box;
+    font-size: 16px;
 }
 
 body {
-  font-family: 'Roboto', Helvetica, sans-serif;
-  font-size: 16px;
-  line-height: 1.42;
-  color: $text-color;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    margin: 0;
+    padding: 0;
+    font-family: Arial, Helvetica, sans-serif;
+    line-height: 1.42;
+    color: $dark;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
-.wrapper {
-  overflow: hidden;
-  min-height: 100%;
-  position: relative;
-}
-
-.container {
-  margin: 0 auto;
-  width: 95%;
-}
-
-button {
-  border: 0;
-  cursor: pointer;
-}
-
-* {
-  box-sizing: border-box;
+a {
+    text-decoration: none;
 }
 
 ul {
-  padding: 0;
-  margin: 0;
-  list-style: none;
+    padding: 0;
+    margin: 0;
+    li {
+        list-style: none;
+    }
 }
 
-h1, h2, h3, h4, h5, h6 {
-  font-weight: normal;
-  margin: 0;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-weight: normal;
+    margin: 0;
 }
 
 p {
-  margin: 0;
-  padding: 0;
+    margin: 0;
+    padding: 0;
+}
+
+table {
+    border-collapse: collapse;
+    border-spacing: 0;
+}
+
+button {
+    border: 0;
+    cursor: pointer;
+}
+
+img,
+embed,
+object,
+video {
+    max-width: 100%;
 }
