--- a/src/views/pages/about.pug
+++ b/src/views/pages/about.pug
@@ -1,10 +1,135 @@
 extends ../main.layout.pug
 
 block variables
-  - var title = 'Обо мне'
+    - var title = 'Обо мне';
 
 block scripts
-  script(src='about.bundle.js')
+    script(src='about.bundle.js')
 
 block content
-  h1 Страничка "Обо Мне"  
+    section.section.hero
+        - 
+            var socials = [
+                ['vk', 'http://vk.com'],
+                ['github', 'http://gh.com'],
+                ['in', 'http://in.com']
+            ]
+        header.header
+            .socials
+                ul.socials__list
+                    each item in socials
+                        li.socials__item
+                            a(href=`${item[1]}`).socials__link
+                                +icon(item[0], 'socials__icon')
+            .hamburger
+                a(href="№").hamburger__link
+                    +icon('hamburger', 'hamburger__icon')
+
+        .author
+            .author__bg
+                +icon('stars1', 'author__icon')
+            .author__desc
+                .photo
+                    img.photo__img(src="./assets/images/content/avatar.jpg", alt="photo__img")
+                .desc
+                    .desc__name Владимир Астахов
+                    .desc__info Личный сайт разработчика
+
+        .down-btn
+            a(href="#").down-btn__link
+                +icon('portf_arrow_down', 'down-btn__icon')
+
+    section.about
+        .about__left
+            .about__triangle
+                svg.triangle.triangle_fill_white
+
+            .about__left-title
+                .block-title Обо мне
+            .about__left-content
+                .user-description
+                    .user-description__image
+                        img(src="", alt="user-description__avatar").user-description__avatar    
+                    .user-description__data
+                        .user-description__title
+                            .block-subtitle Кто я 
+                        .user-description__text.text-content
+                            p Lorem, ipsum dolor sit amet consectetur adipisicing elit. In tempore non modi ex quia deserunt, beatae sint explicabo consequuntur maxime cupiditate, aliquam repudiandae tenetur natus labore voluptatum fugiat totam veritatis.
+                            p Lorem, ipsum dolor sit amet consectetur adipisicing elit. In tempore non modi ex quia deserunt, beatae sint explicabo consequuntur maxime cupiditate, aliquam repudiandae tenetur natus labore voluptatum fugiat totam veritatis.
+        .about__right
+            .about__triangle
+                svg.triangle.triangle_fill_beige
+
+            .about__right-title
+                .block-subtitle Чем я могу быть вам полезен
+            .about__right-description.text-content
+                p Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste velit mollitia nemo reprehenderit ipsam corrupti deleniti, blanditiis sit magni fuga eveniet hic sint illo? Quae harum voluptatem optio ipsum blanditiis. 
+            .about__right-content
+                - 
+                    var skills = [
+                        ['Frontend', [['Html5', 30], ['css3', 50], ['javascript', 70]]],
+                        ['Backend', [['Html5', 30], ['css3', 50], ['javascript', 70]]],
+                        ['Workflow', [['Html5', 30], ['css3', 50], ['javascript', 70]]],
+                    ]
+
+                ul.skills-list
+                    each skillsrow in skills
+                        li.skills-list__item.skills-row
+                            .skills-row__title #{skillsrow[0]}
+                            ul.skills-row__list
+                                each skill in skillsrow[1]
+                                    li.skills-row__item
+                                        figure.skill(data-percents="70")
+                                            svg(viewBox="0 0 100 100" preserveAspectRatio="none").skill__figure
+                                                circle(cx="50" cy="50" r="40").skill__circle.skill__circle_under
+                                                circle(cx="50" cy="50" r="40").skill__circle.skill__circle_above
+                                            .skill__title #{skill[0]}
+
+    section.map
+        .google-map
+        .map__data
+            .contacts
+                h2.contacts__title
+                    .block-subtitle Контакты
+                address.contacts__data
+                    ul.contacts__list
+                        - 
+                            var contacts = [
+                                ['skype', 'skype_kdn'],
+                                ['skype', 'skype_kdn'],
+                                ['skype', 'skype_kdn'],
+                                ['skype', 'skype_kdn']
+                            ]
+                        each item in contacts
+                            li.contacts__item.contacts-row
+                                .contacts-row.contacts__icon
+                                    +icon(`../${item[0]}`, 'contacts__icon-img')
+                                .contacts-row.contacts__title #{item[1]}
+
+    footer.footer
+        .footer__up
+            .column
+                ul.column__list
+                    li.column__item
+                        p Этот сайт я сделал в рамках обучения в Школе онлайн образования LoftSchool
+                    li.column__item
+                        nav.menu
+                            ul.menu__list
+                                each item in ['Мои работы', "Обо мне", "Блог", "Авторизация"]
+                                    li.menu__item
+                                        a(href="#").menu__link #{item}
+                        .socials
+                            ul.socials__list
+                                each item in socials
+                                    li.socials__item
+                                        a(href=`${item[1]}`).socials__link
+                                            +icon(item[0], 'socials__link-icon')
+                    li.column__item
+                        .data-contact
+                            ul.data-contact__list
+                                each item in ['skype_kdn', "astahov@gmail.com", "+7 931 200 93 24", "г.Минск, ул.Ложинская,д.4"]
+                                    li.data-contact__item
+                                        span.data-contact__span #{item}
+        .footer__down &copy Максим Козырицкий | Создано в LoftSchool | 2016
+
+           
