--- a/src/assets/styles/blocks/hero.scss
+++ b/src/assets/styles/blocks/hero.scss
@@ -3,6 +3,36 @@
   background-repeat: no-repeat;
   background-position: 50%;
   background-size: cover;
-  display: flex;
-  flex-direction: column;
+  position: relative;
+}
+
+.socials__hero {
+  position: absolute;
+  top: 35px;
+  left: 35px;
+}
+
+.hamburger__hero {
+  position: absolute;
+  top: 30px;
+  right: 30px;
+}
+
+.author__hero {
+  width: 460px;
+  position: absolute;
+  top: 13%;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  margin: auto;
+}
+
+.down-btn__hero {
+  width: 26px;
+  position: absolute;
+  bottom: 5%;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
 }
