--- a/src/assets/styles/layout/adjustment.scss
+++ b/src/assets/styles/layout/adjustment.scss
@@ -1,7 +1,7 @@
 .wrapper {
     width: 100%;
     height: 100%;
-    position: relative; //min-width: rem(940px)+rem(20px);
+    position: relative;
     min-height: 100%; //overflow: hidden;
 }
 
@@ -13,7 +13,7 @@
 }
 
 .container {
-    width: 95%; //max-width: rem(940px);
+    width: 95%;
     margin: 0 auto;
     height: 100%;
 }
@@ -21,5 +21,5 @@
 .section {
     height: 100%;
     width: 100%;
-    min-height: rem(650px);
+    min-height: 650px;
 }
