--- a/src/assets/styles/layout/base.scss
+++ b/src/assets/styles/layout/base.scss
@@ -21,7 +21,7 @@ html {
 body {
     margin: 0;
     padding: 0;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Roboto, Arial, Helvetica, sans-serif;
     line-height: 1.42;
     color: $dark;
     -webkit-font-smoothing: antialiased;
