--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -2,4 +2,4 @@
 @import "./layout/fonts.scss";
 @import "./layout/base.scss";
 @import "./layout/adjustment.scss";
-@import "./blocks/*.scss";
+@import "./blocks/**/*.scss";
