--- a/src/views/pages/about.pug
+++ b/src/views/pages/about.pug
@@ -42,17 +42,16 @@ block content
                 a(href="#").down-btn__link
                     +icon('portf_arrow_down', 'down-btn__icon')
 
-    section.about
+    section.section.about
+        +triangles('about') 
         .about__left
-            .about__triangle
-                svg.triangle.triangle_fill_white
-
             .about__left-title
                 .block-title Обо мне
+                img(src="./assets/images/svg/stars2.svg", alt="galaxy").title__icon
             .about__left-content
                 .user-description
                     .user-description__image
-                        img(src="", alt="user-description__avatar").user-description__avatar    
+                        img(src="./assets/images/content/avatar-big.jpg", alt="user-description__avatar").user-description__avatar    
                     .user-description__data
                         .user-description__title
                             .block-subtitle Кто я 
@@ -60,19 +59,16 @@ block content
                             p Lorem, ipsum dolor sit amet consectetur adipisicing elit. In tempore non modi ex quia deserunt, beatae sint explicabo consequuntur maxime cupiditate, aliquam repudiandae tenetur natus labore voluptatum fugiat totam veritatis.
                             p Lorem, ipsum dolor sit amet consectetur adipisicing elit. In tempore non modi ex quia deserunt, beatae sint explicabo consequuntur maxime cupiditate, aliquam repudiandae tenetur natus labore voluptatum fugiat totam veritatis.
         .about__right
-            .about__triangle
-                svg.triangle.triangle_fill_beige
-
             .about__right-title
-                .block-subtitle Чем я могу быть вам полезен
+                .block-subtitle.block-subtitle_right Чем я могу быть вам полезен
             .about__right-description.text-content
                 p Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste velit mollitia nemo reprehenderit ipsam corrupti deleniti, blanditiis sit magni fuga eveniet hic sint illo? Quae harum voluptatem optio ipsum blanditiis. 
             .about__right-content
                 - 
                     var skills = [
-                        ['Frontend', [['Html5', 30], ['css3', 50], ['javascript', 70]]],
-                        ['Backend', [['Html5', 30], ['css3', 50], ['javascript', 70]]],
-                        ['Workflow', [['Html5', 30], ['css3', 50], ['javascript', 70]]],
+                        ['Frontend', [['HTML5', 30], ['CSS3', 50], ['JavaScript', 70]]],
+                        ['Backend', [['HTML5', 30], ['CSS3', 50], ['JavaScript', 70]]],
+                        ['Workflow', [['HTML5', 30], ['CSS3', 50], ['JavaScript', 70]]],
                     ]
 
                 ul.skills-list
@@ -88,51 +84,52 @@ block content
                                                 circle(cx="50" cy="50" r="40").skill__circle.skill__circle_above
                                             .skill__title #{skill[0]}
 
-    section.map
+    section.section.map
         .google-map
         .map__data
             .contacts
                 h2.contacts__title
-                    .block-subtitle Контакты
-                address.contacts__data
+                    .block-subtitle.block-subtitle_contacts Контакты
+                .contacts__data
                     ul.contacts__list
                         - 
                             var contacts = [
                                 ['skype', 'skype_kdn'],
-                                ['skype', 'skype_kdn'],
-                                ['skype', 'skype_kdn'],
-                                ['skype', 'skype_kdn']
+                                ['phone_n', '+7 342 23 23'],
+                                ['envelope_n', 'astahov@gmail.com'],
+                                ['map_n', 'Minsk, Pushna 23']
                             ]
                         each item in contacts
-                            li.contacts__item.contacts-row
-                                .contacts-row.contacts__icon
-                                    +icon(`../${item[0]}`, 'contacts__icon-img')
-                                .contacts-row.contacts__title #{item[1]}
+                            li.contacts__item
+                                .contacts__icon
+                                    +icon(item[0], 'contacts__icon-img')
+                                    .contacts__titles #{item[1]}
+                                
 
-    footer.footer
-        .footer__up
-            .column
-                ul.column__list
-                    li.column__item
-                        p Этот сайт я сделал в рамках обучения в Школе онлайн образования LoftSchool
-                    li.column__item
-                        nav.menu
-                            ul.menu__list
-                                each item in ['Мои работы', "Обо мне", "Блог", "Авторизация"]
-                                    li.menu__item
-                                        a(href="#").menu__link #{item}
-                        .socials
-                            ul.socials__list
-                                each item in socials
-                                    li.socials__item
-                                        a(href=`${item[1]}`).socials__link
-                                            +icon(item[0], 'socials__link-icon')
-                    li.column__item
-                        .data-contact
-                            ul.data-contact__list
-                                each item in ['skype_kdn', "astahov@gmail.com", "+7 931 200 93 24", "г.Минск, ул.Ложинская,д.4"]
-                                    li.data-contact__item
-                                        span.data-contact__span #{item}
-        .footer__down &copy Максим Козырицкий | Создано в LoftSchool | 2016
+        footer.footer
+            .footer__up
+                .column
+                    ul.column__list
+                        li.column__item
+                            p Этот сайт я сделал в рамках обучения в Школе онлайн образования LoftSchool
+                        li.column__item
+                            nav.menu
+                                ul.menu__list
+                                    each item in ['Мои работы', "Обо мне", "Блог", "Авторизация"]
+                                        li.menu__item
+                                            a(href="#").menu__link #{item}
+                            .socials
+                                ul.socials__list
+                                    each item in socials
+                                        li.socials__item
+                                            a(href=`${item[1]}`).socials__link
+                                                +icon(item[0], 'socials__icon socials__icon_color_grey')
+                        li.column__item
+                            .data-contact
+                                ul.data-contact__list
+                                    each item in ['skype_kdn', "astahov@gmail.com", "+7 931 200 93 24", "г.Минск, ул.Ложинская,д.4"]
+                                        li.data-contact__item
+                                            span.data-contact__span #{item}
+            .footer__down &copy Максим Козырицкий | Создано в LoftSchool | 2018
 
            
