--- a/src/assets/styles/blocks/about/tringl.scss
+++ b/src/assets/styles/blocks/about/tringl.scss
@@ -21,3 +21,14 @@
     }
   }
 }
+
+.triangles-blog {
+  .triangles__svg {
+    &-left {
+      fill: $beige;
+    }
+    &-right {
+      fill: $beige;
+    }
+  }
+}
