--- a/src/views/pages/about.pug
+++ b/src/views/pages/about.pug
@@ -2,46 +2,15 @@ extends ../main.layout.pug
 
 block variables
     - var title = 'Обо мне';
+    - var titlePage = 'Козырицкий Максим';
+    - var titleSite = 'Личный сайт веб-разработчика';
 
 block scripts
     script(src='about.bundle.js')
 
 block content
     section.section.hero
-        - 
-            var socials = [
-                ['vk', 'http://vk.com'],
-                ['github', 'http://gh.com'],
-                ['in', 'http://in.com']
-            ]
-        .socials__hero
-            .socials
-                ul.socials__list
-                    each item in socials
-                        li.socials__item
-                            a(href=`${item[1]}`).socials__link
-                                +icon(item[0], 'socials__icon')
-        .hamburger__hero
-            .hamburger  
-                a(href="№").hamburger__link
-                    +icon('hamburger', 'hamburger__icon')
-
-        .author__hero
-            .author
-                .author__bg
-                    img(src="./assets/images/svg/stars1.svg", alt="galaxy").author__icon
-                .author__data
-                    .author__avatar
-                        img.author__img(src="./assets/images/content/avatar-small.jpg", alt="photo__img")
-                    .author__desc
-                        .author__name Владимир Астахов
-                        .author__info Личный сайт разработчика
-
-        .down-btn__hero
-            .down-btn
-                a(href="#").down-btn__link
-                    +icon('portf_arrow_down', 'down-btn__icon')
-
+        include ../common/header
     section.section.about
         +triangles('about') 
         .about__left
@@ -83,7 +52,6 @@ block content
                                                 circle(cx="50" cy="50" r="40").skill__circle.skill__circle_under
                                                 circle(cx="50" cy="50" r="40").skill__circle.skill__circle_above
                                             .skill__title #{skill[0]}
-
     section.section.map
         .google-map
         .map__data
@@ -104,32 +72,7 @@ block content
                                 .contacts__icon
                                     +icon(item[0], 'contacts__icon-img')
                                     .contacts__titles #{item[1]}
-                                
-
-        footer.footer
-            .footer__up
-                .column
-                    ul.column__list
-                        li.column__item
-                            p Этот сайт я сделал в рамках обучения в Школе онлайн образования LoftSchool
-                        li.column__item
-                            nav.menu
-                                ul.menu__list
-                                    each item in ['Мои работы', "Обо мне", "Блог", "Авторизация"]
-                                        li.menu__item
-                                            a(href="#").menu__link #{item}
-                            .socials
-                                ul.socials__list
-                                    each item in socials
-                                        li.socials__item
-                                            a(href=`${item[1]}`).socials__link
-                                                +icon(item[0], 'socials__icon socials__icon_color_grey')
-                        li.column__item
-                            .data-contact
-                                ul.data-contact__list
-                                    each item in ['skype_kdn', "astahov@gmail.com", "+7 931 200 93 24", "г.Минск, ул.Ложинская,д.4"]
-                                        li.data-contact__item
-                                            span.data-contact__span #{item}
-            .footer__down &copy Максим Козырицкий | Создано в LoftSchool | 2018
+    
+        include ../common/footer
 
            
