--- a/src/views/pages/about.pug
+++ b/src/views/pages/about.pug
@@ -72,7 +72,7 @@ block content
                                 .contacts__icon
                                     +icon(item[0], 'contacts__icon-img')
                                     .contacts__titles #{item[1]}
-    
-        include ../common/footer
+        footer.footer
+            include ../common/footer
 
            
