--- a/src/views/pages/blog.pug
+++ b/src/views/pages/blog.pug
@@ -11,13 +11,13 @@ block scripts
 block content
     section.section.hero
         include ../common/header
-    section.section.blog
+    section.blog
         - 
             var post = [
                 'Самое важное в SASS', 
-                "Самое важное в SASS", 
-                "Самое важное в SASS", 
-                "Самое важное в SASS Самое важное в SASS Самое важное в SASS"
+                "Самое важное в LESS", 
+                "Самое важное в Ruby", 
+                "Самое важное в NMP YARN BOWER BREW"
             ]
         +triangles('blog')
         .blog-column
@@ -36,10 +36,11 @@ block content
                                     h3 #{item}
                                 .post__date 22 ноября 2018
                                 .post__text 
-                                    p Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo saepe veritatis impedit expedita unde. Sapiente sed dolorum eligendi dolore, ex, natus nam magni eius sit, ad cum quidem! Laboriosam, ut?
-                                    p Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem rerum ipsam minus hic quis ducimus distinctio quae molestiae, reiciendis aspernatur similique vero. Veritatis reprehenderit, nam tempore eveniet quos sint error?
+                                    p Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo saepe veritatis impedit expedita unde. Sapiente sed dolorum eligendi dolore, ex, natus nam magni eius sit, ad cum quidem! Laboriosam, ut? Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis repudiandae ratione, sapiente expedita, et asperiores odio obcaecati repellendus, quod id ex nobis. Adipisci ut reprehenderit pariatur facere et, nemo odit?
+                                    p Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem rerum ipsam minus hic quis ducimus distinctio quae molestiae, reiciendis aspernatur similique vero. Veritatis reprehenderit, nam tempore eveniet quos sint error? Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus officiis, nulla accusantium rerum impedit laborum magni sint tenetur inventore labore animi voluptate? Laboriosam debitis alias asperiores assumenda nihil quasi repudiandae!
 
             .blog-column__empty 
-        include ../common/footer
+        footer.footer-blog
+            include ../common/footer
 
 
