--- a/src/assets/styles/blocks/index/nav-welc.scss
+++ b/src/assets/styles/blocks/index/nav-welc.scss
@@ -13,7 +13,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 15px 0;
     &:nth-child(2) {
         border-right: 2px solid rgba(222, 227, 231, 0.5);
         border-left: 2px solid rgba(222, 227, 231, 0.5);
@@ -30,4 +29,9 @@
     color: #ffffff;
     font-size: 16px;
     font-weight: 500;
+    padding: 15px 0;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
