--- a/src/assets/styles/blocks/about/contacts.scss
+++ b/src/assets/styles/blocks/about/contacts.scss
@@ -1,39 +1,41 @@
 .contact {
-    width: 100%;
+  width: 100%;
 }
 
 .block-subtitle_contacts {
-    line-height: 0.8;
+  line-height: 0.8;
 }
 
 .contacts__title {
-    display: flex;
-    justify-content: center;
-    margin-bottom: 30px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 30px;
 }
 
 .contacts__list {
-    display: flex;
-    flex-wrap: wrap;
-    padding: 0 20px;
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0 20px;
 }
 
 .contacts__item {
-    width: 50%;
-    margin-bottom: 20px;
-    &:nth-child(even) {
-        padding-left: 20px;
-    }
+  width: 50%;
+  margin-bottom: 20px;
+  &:nth-child(even) {
+    padding-left: 20px;
+  }
 }
 
 .contacts__icon {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 
 .contacts__icon-img {
-    width: 45px;
-    height: 45px;
-    fill: rgb(0, 74, 210);
-    margin-right: 10px;
+  width: 45px;
+  height: 45px;
+  fill: rgb(0, 74, 210);
+  margin-right: 10px;
 }
