--- a/src/assets/styles/blocks/index/avatar.scss
+++ b/src/assets/styles/blocks/index/avatar.scss
@@ -1,38 +1,39 @@
 .avatar {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 .avatar__pic {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .avatar__img {
-    width: 140px;
-    height: 140px;
-    border-radius: 50%;
+  width: 140px;
+  height: 140px;
+  border-radius: 50%;
+  object-fit: cover;
 }
 
 .avatar__desc {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .avatar__name {
-    color: #ffffff;
-    font-size: 28px;
-    font-weight: 500;
-    line-height: 0.8;
-    margin-top: 20px;
+  color: #ffffff;
+  font-size: 28px;
+  font-weight: 500;
+  line-height: 0.8;
+  margin-top: 20px;
 }
 
 .avatar__info {
-    color: #ffffff;
-    font-size: 16px;
-    font-weight: 400;
-    margin-top: 10px;
+  color: #ffffff;
+  font-size: 16px;
+  font-weight: 400;
+  margin-top: 10px;
 }
