--- a/src/views/common/header.pug
+++ b/src/views/common/header.pug
@@ -4,6 +4,13 @@
         ['github', 'http://gh.com'],
         ['in', 'http://in.com']
     ]
+- 
+    var works = [
+        ['Мои работы', '#'],
+        ['Обо мне', './about.html'],
+        ['Блог', './blog.html'],
+        ['Авторизация', './index.html']
+    ]
 .socials__hero
     .socials
         ul.socials__list
