--- a/src/assets/styles/blocks/about/contacts.scss
+++ b/src/assets/styles/blocks/about/contacts.scss
@@ -39,3 +39,11 @@
   fill: rgb(0, 74, 210);
   margin-right: 10px;
 }
+
+.contacts__link {
+  color: #474b57;
+  font-size: 16px;
+  font-weight: 500;
+  justify-content: center;
+  align-items: center;
+}
