--- a/src/views/common/header.pug
+++ b/src/views/common/header.pug
@@ -6,7 +6,7 @@
     ]
 - 
     var works = [
-        ['Мои работы', '#'],
+        ['Мои работы', './works.html'],
         ['Обо мне', './about.html'],
         ['Блог', './blog.html'],
         ['Авторизация', './index.html']
