--- a/src/views/pages/index.pug
+++ b/src/views/pages/index.pug
@@ -23,7 +23,7 @@ block content
           ]
         - 
           var welc = [
-              ['Мои работы', '#'],
+              ['Мои работы', './works.html'],
               ['Обо мне', './about.html'],
               ['Блог', './blog.html']
           ]
