--- a/src/assets/styles/blocks/index/intro.scss
+++ b/src/assets/styles/blocks/index/intro.scss
@@ -1,14 +1,40 @@
 .intro {
-    background-color: rgba(28, 31, 41, 0.5);
     width: 380px;
     height: 395px;
+    border-radius: 15px;
+    position: relative;
+    perspective: 1000px;
+    &:hover .intro__welcome {
+        transform: rotateY(180deg);
+    }
+    &:hover .intro__auth {
+        transform: rotateY(360deg);
+    }
+}
+
+.intro__welcome,
+.intro__auth {
     position: absolute;
-    top: 50%;
-    left: 50%;
-    margin-right: -50%;
-    transform: translate(-50%, -50%);
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+    transition: 1s;
+    backface-visibility: hidden;
+}
+
+.intro__welcome {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    background-color: rgba(28, 31, 41, 0.5);
+}
+
+.intro__auth {
+    background-color: rgba(28, 31, 41, 0.5);
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
     border-radius: 15px;
+    transform: rotateY(180deg);
 }
