--- a/src/assets/styles/blocks/index/welcom.scss
+++ b/src/assets/styles/blocks/index/welcom.scss
@@ -1,7 +1,10 @@
 .welcome {
-    background-image: url("./assets/images/content/bg.jpg");
-    background-repeat: no-repeat;
-    background-position: 50%;
-    background-size: cover;
-    position: relative;
+  background-image: url("./assets/images/content/bg.jpg");
+  background-repeat: no-repeat;
+  background-position: 50%;
+  background-size: cover;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
