--- a/src/views/pages/index.pug
+++ b/src/views/pages/index.pug
@@ -39,6 +39,47 @@ block content
               li.nav-welc__item
                 a(href=`${item[1]}`).nav-welc__link #{item[0]}    
       .intro__auth
+        h2.auth-title авторизуйтесь
+        form(action="" method="").form-auth
+          fieldset.form-auth__fs
+            .login
+              .login__img
+                  +icon('login', 'login__icon')
+              .login__wrap
+                input(required type="text" name="login").login__input 
+                label(for="login").login__label Логин
+            .password
+              .password__img
+                  +icon('password', 'password__icon')
+              .password__wrap
+                input(required type="password" name="password").password__input 
+                label(for="password").password__label Пароль
+              
+          .human
+            label.human__label Я человек
+              input(type="checkbox" name="human").human__input.visuallyhidden
+              .checkbox-style
+                .checkbox-style__inner
+          .robot
+            .robot__title Вы точно не робот ?
+            .robot__question
+              .robot__yes
+                label.robot__label
+                  input(type="radio" name="robot").robot__input.visuallyhidden
+                  .radio-style
+                    .radio-style__inner
+                  .robot__text Да
+              .robot__no
+                label.robot__label 
+                  input(type="radio" name="robot").robot__input.visuallyhidden
+                  .radio-style
+                    .radio-style__inner
+                  .robot__text Не уверен
+          .form-auth__buttons
+            button(type="button").button.button_main На главную
+            button(type="submit").button.button__comein Войти
+
+
     .auth-btn
       button.button.button_auth Авторизоваться
     .copyright &copy Максим Козырицкий | Создано в LoftSchool | 2018
