--- a/src/assets/styles/blocks/index/nav-welc.scss
+++ b/src/assets/styles/blocks/index/nav-welc.scss
@@ -1,37 +1,41 @@
 .nav-welc {
-    margin-top: 40px;
+  margin-top: 40px;
 }
 
 .nav-welc__list {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 }
 
 .nav-welc__item {
-    width: 100%;
-    background-color: rgba(0, 76, 209, 0.85);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    &:nth-child(2) {
-        border-right: 2px solid rgba(222, 227, 231, 0.5);
-        border-left: 2px solid rgba(222, 227, 231, 0.5);
-    }
-    &:nth-child(1) {
-        border-bottom-left-radius: 15px;
-    }
-    &:nth-child(3) {
-        border-bottom-right-radius: 15px;
-    }
+  width: 100%;
+  background-color: rgba(0, 76, 209, 0.85);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: 0.4s;
+  &:nth-child(2) {
+    border-right: 2px solid rgba(222, 227, 231, 0.5);
+    border-left: 2px solid rgba(222, 227, 231, 0.5);
+  }
+  &:nth-child(1) {
+    border-bottom-left-radius: 15px;
+  }
+  &:nth-child(3) {
+    border-bottom-right-radius: 15px;
+  }
+  &:hover {
+    background-color: #083c96;
+  }
 }
 
 .nav-welc__link {
-    color: #ffffff;
-    font-size: 16px;
-    font-weight: 500;
-    padding: 15px 0;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  color: #ffffff;
+  font-size: 16px;
+  font-weight: 500;
+  padding: 15px 0;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
