--- a/src/views/common/footer.pug
+++ b/src/views/common/footer.pug
@@ -4,21 +4,10 @@
       li.column__item
         p Этот сайт я сделал в рамках обучения в Школе онлайн образования LoftSchool
       li.column__item
-        nav.menu
-          ul.menu__list
-            each item in works
-              li.menu__item
-                a(href=`${item[1]}`).menu__link #{item[0]}
+        +works('menu', works)
         .socials
-          ul.socials__list
-            each item in socials
-              li.socials__item
-                a(href=`${item[1]}`).socials__link
-                  +icon(item[0], 'socials__icon socials__icon_color_grey')
+          +socialsFooter('socials', socials)
       li.column__item
         .data-contact
-          ul.data-contact__list
-            each item in ['skype_kdn', "astahov@gmail.com", "+7 931 200 93 24", "г.Минск, ул.Ложинская,д.4"]
-              li.data-contact__item
-                span.data-contact__span #{item}
+          +contact('data-contact', contact)
 .footer__down &copy Максим Козырицкий | Создано в LoftSchool | 2018
